# HPC

./: README.md  index.html  params.json
cppThreads/: a.out  hello  hello.cpp
cuda/dfa_membership_test/: Julia_set.odt  Readme.md  Report.odt  a.out  analysis  analysis.sh  d2  d3  d4  data  dfa  dfa2  dfa_final.cu  dfa_main.cu  gen  generate.cpp  main  main.cpp  main.cu  output  output1  test.sh  timeanalysis
cuda/fractal_in_cuda/: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  a.out  cmake_install.cmake  fractal_seq.cu  fractals.cu
mpi/: mpi_FW.c  mpi_sum.c
mpi/FW/: analysis.sh  analysis.txt  analysis2.txt  gen_FW.c  mpi_FW.c  seq_FW.c
mpi/MAT_MAT_MUL/: a.out  input  mat_gen.c  mpi_mat_mat_mul.c  mpi_mat_mat_row_decomp.c  row
mpi/MAT_VEC_MUL/: analysis.sh  analysis.txt  mat_gen.c  mpi_mat_vec_mul.c  seq_mat_vec_mul.c
mpi/prelims/: mpi_get_count.c  mpi_reduce.cp  mpi_scan.c  mpi_scatter_gather.c  mpi_sendrecv.c  mpi_sendrecv_replace.c  mpi_status.c
openmp/: a.out  analysis.sh  fft_openmp.cpp  mat_mat_mul.cpp  mmmul
